--- a/curie-auto-service/package.json
+++ b/curie-auto-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "esm": "^3.2.22",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
     "pg": "^7.9.0",
     "sqlite3": "^4.0.6"
@@ -25,5 +26,8 @@
     "chai-http": "^4.2.1",
     "mocha": "^6.1.2",
     "nodemon": "^1.18.11"
+  },
+  "_moduleAliases": {
+    "~": "app"
   }
 }
